# sbg

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/workflows/: ci.yml
examples/: main.rs  main_impl.rs
resources/: spec.yml
resources/sample/: Cargo.toml
resources/sample/src/: main.rs  main_impl.rs
src/: main.rs  main.rs.tpl  main_impl.rs.tpl  summary.tpl
