[package]
name = "sbg"
version = "0.0.2"
description = "generates boilerplate for a structopt-driven cli"
repository = "https://github.com/tshepang/sbg"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "clap", "structopt"]
authors = ["Tshepang Lekhonkhobe <tshepang@gmail.com>"]
edition = "2018"

[dependencies]
pretty_env_logger = "0.4"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_yaml = "0.8"
structopt = "0.3"
handlebars = "3"
heck = "0.3"

[dev-dependencies]
url = "2"
