[package]
name = "sbg"
version = "0.0.2"
description = "generates CLI boilerplate"
repository = "https://github.com/tshepang/sbg"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "clap", "structopt"]
authors = ["Tshepang Mbambo <tshepang@gmail.com>"]
edition = "2021"
rust-version = "1.58"

[dependencies]
anyhow = "1"
handlebars = "4"
heck = "0.4"
serde_yaml = "0.9"

[dependencies.clap]
version = "3"
features = ["derive"]

[dependencies.serde]
version = "1"
features = ["derive"]
